--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
   fluttertoast: ^8.2.1
+  cloud_firestore: ^4.4.5
 
 dev_dependencies:
   flutter_test:
