--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,7 @@ android {
         applicationId "com.example.firbase"
         minSdkVersion 21
         targetSdkVersion 30
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
