--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   conditional_builder_null_safety: ^0.0.6
+  shared_preferences: ^2.0.20
   flutter_bloc: ^8.0.1
   bloc: ^8.0.3
-  flutter_mute: ^0.0.4
+  # !firebase
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.4.5
+  # !
 
 dev_dependencies:
   flutter_test:
