--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   conditional_builder_null_safety: ^0.0.6
+  image_picker: ^0.8.7
   shared_preferences: ^2.0.20
   flutter_bloc: ^8.0.1
   bloc: ^8.0.3
