--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^4.3.0
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.4.5
+  firebase_storage: ^11.0.16
   # !
 
 dev_dependencies:
